Subscripciones de Cliente
Se implementa la pantalla de subscripciones del cliente.

--- a/src/main/java/client/jFrameSubscriptions.form
+++ b/src/main/java/client/jFrameSubscriptions.form
@@ -31,6 +31,9 @@
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="jButtonRemoveSubscription" max="32767" attributes="0"/>
                   <Component id="jButtonAddSubscription" max="32767" attributes="0"/>
+                  <Component id="jButtonCancel" max="32767" attributes="0"/>
+                  <Component id="jButtonCommitChanges" max="32767" attributes="0"/>
+                  <Component id="jButtonEndedSubscriptions" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -40,11 +43,17 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="13" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="jButtonAddSubscription" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButtonRemoveSubscription" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jButtonEndedSubscriptions" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="jButtonCancel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jButtonCommitChanges" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane1" min="-2" pref="341" max="-2" attributes="0"/>
               </Group>
@@ -61,21 +70,23 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTable1">
+        <Component class="javax.swing.JTable" name="jTableSubscripciones">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                <Column editable="true" title="Title 4" type="java.lang.Object"/>
+              <Table columnCount="4" rowCount="1">
+                <Column editable="true" title="Subscription Type" type="java.lang.String"/>
+                <Column editable="false" title="Date Requested" type="java.lang.String"/>
+                <Column editable="true" title="Date Accepted" type="java.lang.String"/>
+                <Column editable="false" title="Price" type="java.lang.Integer"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
-                  <Editor/>
+                  <Editor editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                    <Connection code="this.getSubscriptionCellEditor()" type="code"/>
+                  </Editor>
                   <Renderer/>
                 </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
@@ -110,6 +121,21 @@
     <Component class="javax.swing.JButton" name="jButtonRemoveSubscription">
       <Properties>
         <Property name="text" type="java.lang.String" value="Remove Subscription"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButtonCancel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Cancel"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButtonCommitChanges">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Commit Changes"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButtonEndedSubscriptions">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="View Finalized Subscriptions"/>
       </Properties>
     </Component>
   </SubComponents>
